# Performance-agent

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
apps/api/: README.md  pyproject.toml
apps/api/src/performance_agent/: __init__.py
apps/api/src/performance_agent/engine/: __init__.py  endurance.py  feasibility.py  load.py  periodization.py  strength.py
apps/api/tests/engine/: test_endurance.py  test_engine_purity.py  test_feasibility.py  test_load.py  test_periodization.py  test_properties.py  test_strength.py
docs/: eval-checklist.md  installing.md  proactive-reminders.md
docs/i18n/: README.de.md  README.es.md  README.fr.md  README.it.md
docs/plans/: 2026-07-17-multi-athlete-cwd-design.md  2026-07-17-multi-athlete-cwd-plan.md  beyond-national-coach-plan.md  beyond-national-coach-progress.md  beyond-olympic-prep-kickoff.md  beyond-olympic-prep-plan.md  beyond-olympic-prep-progress.md
docs/superpowers/: BACKLOG.md
examples/: README.md
examples/de/: 10k-sub-50.md  arms-and-abs-12-weeks.md  hyrox-12-weeks.md
examples/en/: 10k-sub-50.md  arms-and-abs-12-weeks.md  hyrox-12-weeks.md  kayak-sprint-unseeded.md
examples/es/: 10k-sub-50.md  arms-and-abs-12-weeks.md  hyrox-12-weeks.md
examples/fr/: 10k-sub-50.md  arms-and-abs-12-weeks.md  hyrox-12-weeks.md
examples/it/: 10k-sub-50.md  arms-and-abs-12-weeks.md  hyrox-12-weeks.md
skills/athlete-onboarding/: SKILL.md
skills/deep-research/: SKILL.md
skills/goal-assessment/: SKILL.md
skills/needs-analysis/: SKILL.md
skills/next-week-loads/: SKILL.md
skills/nutrition-planning/: SKILL.md
skills/performance-coach/: SKILL.md
skills/pre-competition/: SKILL.md
skills/program-adaptation/: SKILL.md
skills/program-generation/: SKILL.md
skills/program-optimization/: SKILL.md
skills/program-planning/: SKILL.md
skills/program-report/: SKILL.md
skills/program-review/: SKILL.md
skills/program-watch/: SKILL.md
skills/recovery-analyst/: SKILL.md
skills/session-day/: SKILL.md
skills/training-checkin/: SKILL.md
tests/: program_plans.py
tests/e2e_sim/: harness.py  test_determinism.py  test_persona_p1_runner.py  test_persona_p2_footballer.py  test_persona_p3_hyrox.py  test_persona_p4_sprinter.py  test_persona_p5_powerlifter.py  test_persona_p6_kayak.py  test_properties_consolidated.py
tests/engine/: test_autoregulation.py  test_banister.py  test_competition.py  test_diligence.py  test_endurance.py  test_engine_purity.py  test_exercise_selection.py  test_feasibility.py  test_gaps.py  test_load.py  test_load_monitoring.py  test_macro.py  test_nutrition.py  test_periodization.py  test_progression.py  (+14 more)
(+222 files in other folders)
