[project]
name = "performance-agent"
version = "0.11.0"
description = "Evidence-based AI physical preparation platform — backend"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "strength-and-conditioning",
    "training",
    "coaching",
    "mcp",
    "evidence-based",
    "sports-science",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "fitdecode==0.11.0",
    "mcp==1.28.1",
    "pydantic==2.13.4",
    "pyyaml==6.0.3",
]

[project.urls]
Homepage = "https://github.com/clementrx/Performance-agent"
Issues = "https://github.com/clementrx/Performance-agent/issues"

[project.scripts]
performance-agent = "performance_agent.server.app:main"

[build-system]
requires = ["uv_build>=0.9,<1"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "performance_agent"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "C90",
    "SIM", "RET", "ARG", "PL", "RUF", "D", "TID",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "PLR2004"]

[tool.ty.environment]
python-version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "hypothesis==6.156.4",
    "pytest==9.1.1",
    "ruff==0.15.21",
    "ty==0.0.57",
]
